--- a/src/Users/Müraciətlər/Müraciətlər.css
+++ b/src/Users/Müraciətlər/Müraciətlər.css
@@ -122,3 +122,7 @@
 .input-icon:hover {
   color: #333; /* Change the color on hover */
 }
+
+.custom-date-picker {
+  width: 200px; /* Adjust the width as per your requirement */
+}
