--- a/src/Users/Müraciətlər/Müraciətlər.css
+++ b/src/Users/Müraciətlər/Müraciətlər.css
@@ -123,6 +123,8 @@
   color: #333; /* Change the color on hover */
 }
 
-.custom-date-picker {
-  width: 200px; /* Adjust the width as per your requirement */
-}
+
+
+/* Assuming a parent container with class "date-input-container" */
+
+
