--- a/src/Users/Main/style.css
+++ b/src/Users/Main/style.css
@@ -1,6 +1,9 @@
+/* App.css */
 body {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Blinker', sans-serif;
+  /* You can replace 'Poppins' with the specific font you want to use from Google Fonts */
 }
+
 
 
 /* CSS */
