--- a/src/Users/Muracietler/Muracietler.css
+++ b/src/Users/Muracietler/Muracietler.css
@@ -1,4 +1,10 @@
-/* Apply.js Sidebar */
+.muracietler {
+  font-family: 'Blinker', sans-serif;
+}
+
+
+
+
 .sidebar {
     min-height: 10vh;
     width: 200px;
