--- a/src/Users/Main/style.css
+++ b/src/Users/Main/style.css
@@ -67,3 +67,23 @@ color: white; /* Set the desired font color */
   max-width: 80px;
   margin-right: 10px;
 }
+footer {
+  background-color: #f8f9fa;
+  padding: 0px 0;
+  margin-top: auto;
+  width: 100%;
+  position:absolute;
+  bottom: 0;
+  left: 0;
+  font-family: 'Blinker', sans-serif;
+}
+footer ul li a {
+  color: #6c757d;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+footer ul li a:hover {
+  color: #007bff;
+  text-decoration: none;
+}
